[package]
name = "s3s-rados"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
s3s = "0.9.0"
s3s-aws = "0.9.0"
#s3s = { path = "../s3s/crates/s3s" }
hyper = { version = "0.14.27", features = ["http1", "http2", "server", "stream", "runtime"] }
tokio = { version = "1.36.0", features = ["full", "fs", "io-util"] }
async-trait = "0.1.77"
sqlx = {version = "0.7.3", features = ["postgres", "runtime-tokio-rustls", "time", "uuid"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
aws-config = "1.1.8"
aws-sdk-s3 = "1.19.1"
aws-types = "1.1.8"
futures-core = "0.3.30"
time = "0.3.34"

tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time", "tracing-log"] }
tracing-error = "0.2.0"
tracing-opentelemetry = "0.23.0"
opentelemetry = {version = "0.22.0"}
opentelemetry_api = "0.20.0"
opentelemetry_sdk = {version = "0.22.1", features = ["rt-tokio"]}
opentelemetry-otlp = {version = "0.15.0", features = ["grpc-tonic"]}
tonic = "0.11.0"
